Fix high contrast flag not being set, fix a few inheritance issues

--- a/less/v2/high-contrast/apps.less
+++ b/less/v2/high-contrast/apps.less
@@ -69,9 +69,15 @@
   &.sheet {
     --color-text-dark-primary: #fff;
     --color-text-dark-secondary: var(--color-text-light-3);
+    --dnd5e-background-card: #000000;
+    --dnd5e-background-parchment: #000000;
+    --dnd5e-border-dark: 1px solid #999;
     --dnd5e-color-blue-white: #fff;
     --dnd5e-color-card: #fff;
+    --filigree-background-color: #000000;
     --filigree-border-color: #999;
+    --proficiency-cycle-enabled-color: unset;
+    --proficiency-cycle-disabled-color: unset;
   }
 
   .card { border: var(--dnd5e-border-dark); }
