--- a/less/v2/high-contrast/character.less
+++ b/less/v2/high-contrast/character.less
@@ -51,11 +51,11 @@
 
 .dnd5e-flag-high-contrast.dnd5e-theme-dark .dnd5e2.sheet.actor.character,
 .dnd5e2.sheet.actor.character.dnd5e-flag-high-contrast.dnd5e-theme-dark {
+  .sheet-header { background: none; }
   .sidebar .favorites > h3 { color: var(--dnd5e-color-light); }
+  .tab.features .classes .class .level > span { color: var(--dnd5e-color-light); }
   .ability-scores .ability-score {
     &::before { filter: invert(100%); }
-  }
-  .ability-scores .ability-score {
     .label { color: var(--color-text-light-1); }
   }
 }
